{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 67,
  "lineage": "5a4d666e-a4b0-fe6d-0fd9-4ca8ea1e307e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "work",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:vpc/vpc-06afc3d9043fd755b",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e2c95c2b4f5f15c2",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-04d6736d0472bcc3a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Work VPC"
                ]
              }
            ],
            "id": "vpc-06afc3d9043fd755b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-063686790be0fb897",
            "owner_id": "995060098911",
            "region": "us-east-1",
            "tags": {
              "Name": "Work VPC",
              "cloudlab": "c104856a2429109l7919012t1w995060098911"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "swarm-manager",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:995060098911:instance/i-085a84514fd0bb36a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085a84514fd0bb36a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-031cce4a5aab4565b"
              }
            ],
            "primary_network_interface_id": "eni-031cce4a5aab4565b",
            "private_dns": "ip-10-0-0-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.253",
            "public_dns": "ec2-44-203-253-7.compute-1.amazonaws.com",
            "public_ip": "44.203.253.7",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ff583ab9c3e5cec9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad2406c6f79f4ced",
            "tags": {
              "Name": "swarm-manager"
            },
            "tags_all": {
              "Name": "swarm-manager"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4818116fb68fb0c"
            ]
          },
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.work",
            "data.aws_vpc.work"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "swarm-worker01",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:995060098911:instance/i-0099c9b2ff5ad9b4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0099c9b2ff5ad9b4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cf0135998a8ce74d"
              }
            ],
            "primary_network_interface_id": "eni-0cf0135998a8ce74d",
            "private_dns": "ip-10-0-0-141.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.141",
            "public_dns": "ec2-44-203-85-202.compute-1.amazonaws.com",
            "public_ip": "44.203.85.202",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2097846ef29d65d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad2406c6f79f4ced",
            "tags": {
              "Name": "swarm-worker01"
            },
            "tags_all": {
              "Name": "swarm-worker01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4818116fb68fb0c"
            ]
          },
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.work",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "swarm-worker02",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:995060098911:instance/i-0a73642c5203601b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a73642c5203601b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051da180819b43338"
              }
            ],
            "primary_network_interface_id": "eni-051da180819b43338",
            "private_dns": "ip-10-0-0-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.139",
            "public_dns": "ec2-3-89-75-71.compute-1.amazonaws.com",
            "public_ip": "3.89.75.71",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03094a51ef92ca677",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad2406c6f79f4ced",
            "tags": {
              "Name": "swarm-worker02"
            },
            "tags_all": {
              "Name": "swarm-worker02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4818116fb68fb0c"
            ]
          },
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.work",
            "data.aws_vpc.work"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group/sg-0e4818116fb68fb0c",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4818116fb68fb0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2377
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 7946
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 7946
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9323,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9323
              }
            ],
            "name": "swarm-sg",
            "name_prefix": "",
            "owner_id": "995060098911",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06afc3d9043fd755b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.work"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-006ea044d4ca0851a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-006ea044d4ca0851a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-006ea044d4ca0851a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "3000",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-038af1db70737e4fd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-038af1db70737e4fd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-038af1db70737e4fd",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-0cd3dae08ffc66888",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0cd3dae08ffc66888",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-0cd3dae08ffc66888",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "8080",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-05a436b7ddc045202",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-05a436b7ddc045202",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-05a436b7ddc045202",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "9090",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-0275926a6d3812878",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9090,
            "id": "sgr-0275926a6d3812878",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-0275926a6d3812878",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "2377",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-0a4ce4d1979ac2681",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2377,
            "id": "sgr-0a4ce4d1979ac2681",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-0a4ce4d1979ac2681",
            "tags": null,
            "tags_all": {},
            "to_port": 2377
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-044c6de4a269ceeca",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-044c6de4a269ceeca",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-044c6de4a269ceeca",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "7946",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-0450a3cf69e2e00cc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 7946,
            "id": "sgr-0450a3cf69e2e00cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-0450a3cf69e2e00cc",
            "tags": null,
            "tags_all": {},
            "to_port": 7946
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-04e9ad89794df2f3d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04e9ad89794df2f3d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-04e9ad89794df2f3d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "8080",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-0dce85be72943b5c6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0dce85be72943b5c6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-0dce85be72943b5c6",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "9090",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-017f5c40b5e7399d1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9090,
            "id": "sgr-017f5c40b5e7399d1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-017f5c40b5e7399d1",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "9323",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-05470be3db8b31e6b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9323,
            "id": "sgr-05470be3db8b31e6b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-05470be3db8b31e6b",
            "tags": null,
            "tags_all": {},
            "to_port": 9323
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "4789",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-09bf945a86360da24",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 4789,
            "id": "sgr-09bf945a86360da24",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-09bf945a86360da24",
            "tags": null,
            "tags_all": {},
            "to_port": 4789
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        },
        {
          "index_key": "7946",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995060098911:security-group-rule/sgr-0e5db1cc4627a85a6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 7946,
            "id": "sgr-0e5db1cc4627a85a6",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4818116fb68fb0c",
            "region": "us-east-1",
            "security_group_id": "sg-0e4818116fb68fb0c",
            "security_group_rule_id": "sgr-0e5db1cc4627a85a6",
            "tags": null,
            "tags_all": {},
            "to_port": 7946
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.swarm_sg",
            "data.aws_vpc.work"
          ]
        }
      ]
    }
  ]
}